WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113758
[GTK][AC] Invalid clear ClutterContent of ClutterActor
https://bugs.webkit.org/show_bug.cgi?id=113758
Summary
[GTK][AC] Invalid clear ClutterContent of ClutterActor
ChangSeok Oh
Reported
2013-04-02 01:07:38 PDT
We clear ClutterContent of clutterActor by using g_object_unref for the its reference directly. But I think it is a wrong way.
Attachments
Patch
(1.76 KB, patch)
2013-04-02 01:19 PDT
,
ChangSeok Oh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
ChangSeok Oh
Comment 1
2013-04-02 01:19:43 PDT
Created
attachment 196099
[details]
Patch
Joone Hur
Comment 2
2013-04-03 13:46:44 PDT
Yes, right. It still tries to paint something without Cairo surface.(In reply to
comment #0
)
> We clear ClutterContent of clutterActor by using g_object_unref for the its reference directly. > But I think it is a wrong way.
Yes, right. It still tries to paint something without Cairo surface.
WebKit Review Bot
Comment 3
2013-04-04 10:59:19 PDT
Comment on
attachment 196099
[details]
Patch Clearing flags on attachment: 196099 Committed
r147644
: <
http://trac.webkit.org/changeset/147644
>
WebKit Review Bot
Comment 4
2013-04-04 10:59:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug