[GTK][AC] Invalid clear ClutterContent of ClutterActor https://bugs.webkit.org/show_bug.cgi?id=113758

Patch by ChangSeok Oh <changseok.oh@collabora.com> on 2013-04-04
Reviewed by Gustavo Noronha Silva.

Using clutter_actor_set_content(actor, 0) is better to clear ClutterContent of ClutterActor.
Actually the ClutterContent referece is cleared in the API if we set 0.

No new tests since no functionality changed.

* platform/graphics/clutter/GraphicsLayerActor.cpp:
(graphicsLayerActorUpdateTexture):

Canonical link: https://commits.webkit.org/132290@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147644 268f45cc-cd09-0410-ab3c-d52691b4dbfc